remove not needed vm args