@@ -107,9 +107,8 @@
                     <executable>true</executable>
                     <!-- This will create new .jar file with the -app suffix instead of replacing the old one. Therefore the old one can be used in other projects. -->
                     <classifier>app</classifier>
-                    <!-- These are needed in order to make apache spark work with java 21. Remove them as soon as we upgrade! -->
                     <jvmArguments>
-                        --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.lang.invoke=ALL-UNNAMED --add-opens=java.base/java.lang.reflect=ALL-UNNAMED --add-opens=java.base/java.io=ALL-UNNAMED --add-opens=java.base/java.net=ALL-UNNAMED --add-opens=java.base/java.nio=ALL-UNNAMED --add-opens=java.base/java.util=ALL-UNNAMED --add-opens=java.base/java.util.concurrent=ALL-UNNAMED --add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED --add-opens=java.base/sun.nio.ch=ALL-UNNAMED --add-opens=java.base/sun.nio.cs=ALL-UNNAMED --add-opens=java.base/sun.security.action=ALL-UNNAMED --add-opens=java.base/sun.util.calendar=ALL-UNNAMED --add-opens=java.security.jgss/sun.security.krb5=ALL-UNNAMED -Djava.security.manager=allow
+                        <!-- Add command line arguments if needed. -->
                     </jvmArguments>
                 </configuration>
                 <executions>
